fix overflow behavio css and responsive pokemonList

--- a/web/src/pages/PokemonsList/styles.css
+++ b/web/src/pages/PokemonsList/styles.css
@@ -1,16 +1,113 @@
 #page-list {
+    background-color: #ce0d0d;
+    overflow: auto;
+}
+
+.overflow{
     overflow: auto;
 }
 
 .header{
     display: flex;
     justify-content: space-around;
-    margin: 20px 0px;
     align-items: center;
+    padding: 20px 0px;
     width: 100vw;
+    height: 100px;
+
+    font-size: 32px;
+    font-weight: 700;
+
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+
+    border-bottom: 20px solid rgb(26, 26, 26);
+
+    z-index: 2;
+}
+
+.header button{
+    outline: none;
+    background-color: #fff;
+    
+    border: 20px solid rgb(26, 26, 26);
+    border-radius: 50%;
+
+
+    height: 150px;
+    width: 150px;
+
+    position: absolute;
+    top: 10px;
+
+    font-size: 25px;
+
+    cursor: pointer;
+
+    transition: .5s;
+}
+
+.header button:hover{
+    background-color: rgb(252, 255, 53);
 }
 
 .list{
-    display: grid;
-    grid-template-columns: repeat(4fr);
+    margin-top: 100px;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
 }
+
+@media (max-width: 980px){
+    .header{
+        font-size: 16px;
+
+        border-bottom: 20px solid rgb(26, 26, 26);
+    }
+
+    .header button{
+        border: 20px solid rgb(26, 26, 26);
+        top: 20px;
+
+        height: 130px;
+        width: 130px;
+
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 680px){
+    .header{
+        font-size: 16px;
+    }
+    
+    .header button{
+        border: 10px solid rgb(26, 26, 26);
+        top: 50px;
+        right: 50px;
+
+        height: 80px;
+        width: 80px;
+
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 320px){
+    .header button{
+        top: 150px
+    }
+
+    .header{
+        flex-direction: row;
+        justify-content: space-between;
+        height: 200px;
+
+        border-bottom: 10px solid rgb(26, 26, 26);
+    }
+}
+
+
+
